--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     </dependency>
   </dependencies>
   <build>
-    <testSourceDirectory>vlingo-iddd-agilepm/src/test/kotlin</testSourceDirectory>
+<!--    <testSourceDirectory>vlingo-iddd-agilepm/src/test/kotlin</testSourceDirectory>-->
     <plugins>
       <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
@@ -72,5 +72,6 @@
     <module>vlingo-reactive-messaging-patterns</module>
     <module>vlingo-platform-patterns</module>
     <module>vlingo-simgui-mediator</module>
+    <module>vlingo-iddd-agilepm</module>
   </modules>
 </project>
